# odyssey-quantum

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: ablation_no_fragility.yaml  ablation_no_quantum.yaml  ablation_no_temporal.yaml  ablation_suite.yaml  base.yaml  baseline_mlp.yaml  baseline_suite.yaml  public_unsw_baseline.yaml  public_unsw_odyssey.yaml  public_unsw_odyssey_aggressive.yaml  public_unsw_odyssey_ensemble.yaml  public_unsw_odyssey_optimized.yaml  public_unsw_smoke.yaml  quantum_algorithms.yaml  quantum_foundations.yaml  quantum_suite.yaml  seed_stability_suite.yaml  synthetic_hard_ablation.yaml  synthetic_quantum_smoke.yaml  synthetic_quantum_winner_fast.yaml  synthetic_quantum_winner_research.yaml  synthetic_research.yaml  synthetic_small.yaml
data/: README.md
docs/: architecture.md  experiment_guide.md  quantum_track.md  troubleshooting.md
notebooks/: exploratory_analysis.ipynb
paper/: abstract_draft.md  contributions.md  experiments.md  figure_manifest.md  future_work.md  limitations.md  methodology.md  odyssey_paper.tex  paper_outline.md  quantum_appendix.md  threat_model.md
results/: RESULTS.md  synthetic_hard_ablation_metrics.csv  synthetic_research_metrics.csv  unsw_nb15_baseline_metrics.csv  unsw_nb15_odyssey_metrics.csv
scripts/: export_paper_assets.py  generate_synthetic_data.py  make_figures.py  run_ablation_suite.py  run_all.py  run_baselines.py  run_odyssey.py  setup_env.ps1  setup_env.sh
tests/: test_cli.py  test_data_pipeline.py  test_losses.py  test_metrics.py  test_models.py  test_quantum.py
(+127 files in other folders)
