[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "odyssey"
version = "0.1.0"
description = "Odyssey: A quantum-resilient risk-aware intrusion detection research framework"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "OpenAI Codex" }
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scipy>=1.13",
  "scikit-learn>=1.5",
  "matplotlib>=3.8",
  "PyYAML>=6.0",
  "torch>=2.1",
  "pytest>=8.0",
]

[project.optional-dependencies]
quantum = [
  "pennylane>=0.36",
  "pennylane-qiskit>=0.44",
  "qiskit>=1.0",
  "qiskit-aer>=0.14",
]

[project.scripts]
odyssey = "odyssey.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-p no:cacheprovider"
asyncio_default_fixture_loop_scope = "function"

